--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
   "name": "astro-theme-pure",
-  "workspaces": [
-    "packages/*"
-  ],
   "type": "module",
   "version": "4.1.2",
   "scripts": {
@@ -22,9 +19,9 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.6",
+    "@astrojs/markdown-remark": "^6.3.10",
     "@astrojs/rss": "^4.0.14",
     "@astrojs/vercel": "^9.0.2",
-    "@waline/client": "^3.8.0",
     "astro": "^5.16.6",
     "astro-pure": "1.4.0",
     "katex": "^0.16.27",
